# portfolio

./: .gitignore  README.md  install-backend.bat  install-frontend.bat
.specify/memory/: constitution.md
backend/: alembic.ini  pyproject.toml  requirements.txt  vercel.json
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_fix_tech_stack.py  003_add_project_image.py  004_add_dynamic_sections.py  005_add_service_image.py  006_add_service_json_fields.py  007_add_service_featured_slug.py  f7b5e631ed28_add_is_read_and_status_to_contacts.py
backend/scripts/: add_first_project.py  create_admin.py  recreate_db.py  setup_credentials.py
backend/src/: __init__.py  config.py  database.py  main.py
backend/src/api/: __init__.py  admin.py  contact.py  projects.py  services.py
backend/src/models/: __init__.py  admin.py  base.py  contact.py  image.py  project.py  service.py
backend/src/services/: imagekit.py
backend/src/utils/: security.py
frontend/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/admin/: layout.tsx  page.tsx
frontend/src/app/contact/: page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/services/: page.tsx
frontend/src/components/: Layout.tsx
frontend/src/components/carousel/: Carousel3D.tsx  Carousel5Card.tsx  ServicesCarousel.tsx
frontend/src/lib/: api.ts  auth.ts
frontend/src/styles/: globals.css  neon-theme.css
frontend/src/types/: index.ts
(+11 files in other folders)
